Version 0.9 - September 22, 2013 ------------------------- <ul> <li>Removed all animations</li> <li>Optimized <strong>a lot</strong> of styles by adding placeholders</li> <li>Fixed sticky sidebars</li> <li>Full-screen styles for Inbox, calendar, explore Facebook</li> <li>Fixed bug with notifications being pushed too far to right</li> <li>It's <strong><u>MUCH</u> more speedy</strong></li> <li>Fixed chat sidebar overlapping content</li> <li>Many other fixes</li> <ul>

--- a/sass/partials/_helpers.scss
+++ b/sass/partials/_helpers.scss
@@ -85,6 +85,9 @@ Border radius
 	@include transition($facebookCustomTransitionTime all $facebookCustomTransitionFunction);
 }
 
+%transition-none {
+	@include transition(none);
+}
 /* =============================================================================
 Opacity/visibility
 ========================================================================== */
@@ -126,6 +129,10 @@ Floats
 	position: fixed;
 }
 
+%fixed-important {
+	position: fixed !important;
+}
+
 /* =============================================================================
 Lists
 ========================================================================== */
@@ -154,7 +161,7 @@ User select
 /* =============================================================================
 Widths
 ========================================================================== */
-%width-100 {
+%width-100-important {
 	width: 100% !important;
 }
 
@@ -162,6 +169,13 @@ Widths
 	width: auto;
 }
 
+%width-auto-important {
+	width: auto !important;
+}
+
+%height-auto-important {
+	height: auto !important;
+}
 /* =============================================================================
 Animations
 ========================================================================== */
